[tool.poetry]
name = "encrypter"
version = "0.1.0"
description = ""
authors = ["ZeratCool <kuevda002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyaescrypt = "^6.1.1"
pycryptodome = "^3.20.0"
pyfiglet = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
